--- a/Red_Devils_App/Vieuws/LoginPage.xaml
+++ b/Red_Devils_App/Vieuws/LoginPage.xaml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:vm="clr-namespace:Red_Devils_App.VieuwModels"
              x:Class="Red_Devils_App.Vieuws.LoginPage"
              Title="LoginPage">
     <ContentPage.Resources>
@@ -23,25 +24,15 @@
                 <ColumnDefinition Width="*"></ColumnDefinition>
             </Grid.ColumnDefinitions>
             <Label Style="{StaticResource whitetekst}" Text="enter username" Grid.Row="0"></Label>
+            <Entry x:Name="UsernameEntry" ></Entry>
             <Label Style="{StaticResource whitetekst}" Text="enter password" Grid.Row="1"></Label>
-        <TableView Grid.Column="2" Grid.Row="0">
-            <TableRoot>
-                <TableSection>
-                    <EntryCell  ></EntryCell>                  
-                </TableSection>
-            </TableRoot>
-        </TableView>
-        <TableView Grid.Column="2" Grid.Row="1">
-            <TableRoot>
-                <TableSection>
-                    <EntryCell ></EntryCell>                  
-                </TableSection>
-            </TableRoot>
-        </TableView>
-        <Button Grid.Row="2" 
+            <Entry x:Name="PasswordEntry" IsPassword="True" Grid.Row="1"></Entry>
+            <Label Grid.Column="1">Remember me</Label>
+            <CheckBox IsChecked="{Binding RememberLogin}" Grid.Column="1" Grid.Row="1"></CheckBox>
+            <Button Grid.Row="2" 
                 Grid.Column="1"
                 Text="Login" 
-                Clicked="LoginButton_Clicked"
+                    Command="{Binding LoginCommand}"
                 x:Name="LoginButton" 
                 Background="red" 
                 BorderWidth="1" BorderColor="Yellow" 
